Remove unnecessary files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="header">
-        {% include home/nav-primary.html %}
+        {% include nav-primary.html %}
         <!-- hero banner text -->
         <div class="container-fluid">
             <div class="row">
@@ -19,6 +19,6 @@
                 </div>
             </div>
         </div>
-        {% include home/nav-secondary.html %}
+        {% include nav-secondary.html %}
     </div>
 </header>
