--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -60,9 +60,9 @@ pre code {
 }
 
 .component {
-    padding: 15px 25px 5px 15px;
     text-align: center;
-    margin: 0 8px 15px;
+    padding: 15px 15px 0 15px;
+    margin: 0;
     float: left;
     height: 250px;
     width: 100%;
