--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <div class="hero-text">
                     <div class="hero-text-centered">
                         <h1>
-                            <img class="logo" src="{{ '/_assets/images/logo.svg' | relative_url }}" alt="Docker Docs" title="Docker Docs">
+                            <img class="logo" src="{{ '/_assets/images/logo.svg' | relative_url }}" alt="{{ site.name }}" title="{{ site.name }}">
                             <span>{{ site.name }}</span>
                         </h1>
                         <p>{{ site.description }}</p>
