--- a/_scss/_gheader.scss
+++ b/_scss/_gheader.scss
@@ -11,7 +11,8 @@
     display: flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
-    min-height: 20em;
+    // min-height: 20em;
+    min-height: 335px;
     min-width: 400px;
     -ms-flex-pack: center;
     justify-content: center;
