--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
 	</style>
 </head>
 
-<body ng-app="Docker" ng-controller="DockerController" class="colums">
+<body ng-app="Kbase" ng-controller="KbaseController" class="colums">
     <!-- Header -->
 	{% include header.html %}
 
