--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -23,9 +23,10 @@
 //     width: 160px;
 // }
 .logo {
-    margin: 0 10px 0 0;
-    width: 40px;
-    height: 40px;
+    display: none;
+    margin: -6px 6px 0 0;
+    width: 35px;
+    height: 35px;
 }
 
 .book-title {
