--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,16 +11,16 @@
 	<link rel="canonical" href="{{ page.url }}" />
 
 	<!-- favicon -->
-	<link rel="icon" type="image/x-icon" href="{{ '/_assets/images/logo.svg' | relative_url }}" sizes="128x128">
-	<link rel="apple-touch-icon" type="image/x-icon" href="{{ '/_assets/images/logo.svg' | relative_url }}" sizes="128x128">
+	<link rel="icon" type="image/x-icon" href="{{ '/.assets/images/logo.svg' | relative_url }}" sizes="128x128">
+	<link rel="apple-touch-icon" type="image/x-icon" href="{{ '/.assets/images/logo.svg' | relative_url }}" sizes="128x128">
 
-	<link rel="stylesheet" href="{{ '_assets/css/font-awesome.min.css' | relative_url }}">
-	<link rel="stylesheet" href="{{ '_assets/css/bootstrap.min.css' | relative_url }}">
-	<!-- <link id="pygments" rel="stylesheet" href="{{ '_assets/css/highlight.css' | relative_url }}"> -->
-	<link id="pagestyle" rel="stylesheet" href="{{ '_assets/css/style.css' | relative_url }}">
+	<link rel="stylesheet" href="{{ '.assets/css/font-awesome.min.css' | relative_url }}">
+	<link rel="stylesheet" href="{{ '.assets/css/bootstrap.min.css' | relative_url }}">
+	<!-- <link id="pygments" rel="stylesheet" href="{{ '.assets/css/highlight.css' | relative_url }}"> -->
+	<link id="pagestyle" rel="stylesheet" href="{{ '.assets/css/style.css' | relative_url }}">
 
 	<!-- "Open Sans" font from Google -->
-	<link href="{{ '_assets/css/open-sans.css' | relative_url }}" rel="stylesheet">
+	<link href="{{ '.assets/css/open-sans.css' | relative_url }}" rel="stylesheet">
 
 	<!-- SEO stuff -->
 	<meta property="og:title" content="{{ page.title }}" />
