--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>{{ site.name }}</title>
-	<meta name="description" content="{{ page.description }}" />
+	<title>{{ site.title }}</title>
+	<meta name="description" content="{{ page.description | default: site.description }}" />
 	<meta name="keywords" content="{{ page.keywords | default: site.keywords }}">
 	<link rel="canonical" href="{{ page.url }}" />
 
